--- a/src/main/java/com/alpha/view/AdminPanel.form
+++ b/src/main/java/com/alpha/view/AdminPanel.form
@@ -563,10 +563,8 @@
                           <Component id="jScrollPane1" min="-2" pref="482" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                                  <Component id="jLabel106" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                                  <Component id="totalLable" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="totalLable" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
+                              <Component id="jLabel106" min="-2" pref="32" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel107" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                                   <Component id="todayIncomeLable" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
@@ -4485,6 +4483,7 @@
                       </Properties>
                       <Events>
                         <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableGRNMousePressed"/>
+                        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tableGRNKeyPressed"/>
                       </Events>
                     </Component>
                   </SubComponents>
@@ -4785,6 +4784,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="suplierNameTxt">
+                  <Events>
+                    <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="suplierNameTxtKeyPressed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JFormattedTextField" name="onGRNAddingQtyTxt">
                   <Properties>
