--- a/src/main/java/com/alpha/view/CashierPanel.form
+++ b/src/main/java/com/alpha/view/CashierPanel.form
@@ -138,6 +138,7 @@
                                               <Group type="103" groupAlignment="1" attributes="0">
                                                   <Component id="cashierBatchUnitPriceTxt" min="-2" pref="289" max="-2" attributes="0"/>
                                                   <Component id="cashierStoreDiscountTxt" min="-2" pref="252" max="-2" attributes="0"/>
+                                                  <Component id="jButton1" alignment="1" min="-2" pref="181" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <Component id="jLabel20" min="-2" pref="119" max="-2" attributes="0"/>
@@ -274,7 +275,10 @@
                                   </Group>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="btn_put_To_Cart" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jButton1" max="32767" attributes="0"/>
+                                  <Component id="btn_put_To_Cart" min="-2" pref="30" max="-2" attributes="0"/>
+                              </Group>
                               <EmptySpace pref="348" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel17" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
@@ -1021,6 +1025,23 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Balance        :"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="jButton1">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="33" green="33" red="33" type="rgb"/>
+                </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="12" style="1"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Return Order"/>
+              </Properties>
+              <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jButton1KeyPressed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
