--- a/src/main/java/com/alpha/view/CashierPanel.form
+++ b/src/main/java/com/alpha/view/CashierPanel.form
@@ -128,7 +128,6 @@
                                       </Group>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="1" attributes="0">
@@ -138,7 +137,6 @@
                                               <Group type="103" groupAlignment="1" attributes="0">
                                                   <Component id="cashierBatchUnitPriceTxt" min="-2" pref="289" max="-2" attributes="0"/>
                                                   <Component id="cashierStoreDiscountTxt" min="-2" pref="252" max="-2" attributes="0"/>
-                                                  <Component id="jButton1" alignment="1" min="-2" pref="181" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <Component id="jLabel20" min="-2" pref="119" max="-2" attributes="0"/>
@@ -179,6 +177,10 @@
                                       </Group>
                                   </Group>
                                   <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                                      <Component id="btn_returnorder" min="-2" pref="158" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
@@ -276,7 +278,7 @@
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jButton1" max="32767" attributes="0"/>
+                                  <Component id="btn_returnorder" max="32767" attributes="0"/>
                                   <Component id="btn_put_To_Cart" min="-2" pref="30" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace pref="348" max="32767" attributes="0"/>
@@ -1026,7 +1028,7 @@
                 <Property name="text" type="java.lang.String" value="Balance        :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton1">
+            <Component class="javax.swing.JButton" name="btn_returnorder">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="33" green="33" red="33" type="rgb"/>
@@ -1040,7 +1042,9 @@
                 <Property name="text" type="java.lang.String" value="Return Order"/>
               </Properties>
               <Events>
-                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jButton1KeyPressed"/>
+                <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="btn_returnorderFocusGained"/>
+                <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="btn_returnorderFocusLost"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btn_returnorderKeyPressed"/>
               </Events>
             </Component>
           </SubComponents>
