--- a/src/main/java/com/alpha/view/Welcome.form
+++ b/src/main/java/com/alpha/view/Welcome.form
@@ -226,6 +226,9 @@
                       <Border info="null"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="passwordTxtKeyPressed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JSeparator" name="jSeparator1">
                   <Properties>
